--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -48,6 +48,7 @@ jobs:
           source_dir: .
           trigger_http: true
           service_account_email: ${{ secrets.GCP_SA_EMAIL }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
           bucket: my-deployment-bucket
           credentials: ${{ secrets.GCP_SA_KEY }}
 
