--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build
-        run: npm run build
+    #   - name: Build
+    #     run: npm run build
 
       - name: Deploy to Cloud Functions
         uses: google-github-actions/deploy-cloud-functions@main
