--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -1,6 +1,6 @@
 # Github actions pipline that deploys app in ./public/ to google cloud platform cloud functions
 
-name: Deploy to Cloud Functions
+name: Deploy to Google Cloud Functions
 
 on:
   push:
@@ -9,15 +9,23 @@ on:
 
 jobs:
   deploy:
-    name: Deploy
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: Deploy to Cloud Functions
-        uses: google-github-actions/deploy-cloud-functions@main
+
+      - name: Set up Google Cloud CLI
+        uses: google-github-actions/setup-gcloud@v0.5.1
         with:
-          credentials: ${{ secrets.GCP_SA_KEY }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          name: "index"
-          source: ./public/
+          export_default_credentials: true
+
+      - name: Deploy to Google Cloud Functions
+        run: |
+          gcloud functions deploy weatherApp \
+            --runtime=nodejs14 \
+            --trigger-http \
+            --allow-unauthenticated \
+            --source=./path/to/your/function/code
