--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -15,12 +15,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v1'
+        with:
+            credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
       - name: Set up Google Cloud CLI
         uses: google-github-actions/setup-gcloud@v0.5.1
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          export_default_credentials: true
+            project_id: ${{ secrets.GCP_PROJECT_ID }}
+            export_default_credentials: true
 
       - name: Deploy to Google Cloud Functions
         run: |
